# pagmo2_nds_benchmarks

./: .gitignore  CMakeLists.txt  README.md  flake.nix  main.cpp
pagmo2/: CMakeLists.txt  default.nix  rev
pagmo2/include/pagmo/algorithms/: nsga2.hpp
pagmo2/include/pagmo/utils/: multi_objective.hpp  nondominated_sorting.hpp
pagmo2/src/algorithms/: nsga2.cpp
pagmo2/src/utils/: multi_objective.cpp
pagmo2/src/utils/nds/: deductive_sort.cpp  efficient_sort.cpp  fast_non_dominated_sort.cpp  hierarchical_sort.cpp  merge_sort.cpp  non_dominated_sort.cpp  rank_ordinal.cpp  rank_sort.cpp
pagmo2/tests/: multi_objective.cpp
